# mdbook-pandoc

./: .gitignore  CITATION.cff  devenv.nix  devenv.yaml
mdbook-pandoc/: Cargo.toml
mdbook-pandoc/assets/pandoc/: configs.toml  csl.toml  css.toml  epub_embed_fonts.toml  filters.toml  include_after_body.toml  include_in_header.toml  lua_filters.toml  reference_docs.toml  syntax_definition.toml  template_assets.toml  templates.toml
mdbook-pandoc/assets/pandoc/configs/: aaai23.toml  aaai24.toml  amstat.toml  apa6.toml  arabica.toml  beamer.toml  biometrical_journal.toml  biometrics.toml  biometrika.toml  biostatistics.toml  bootstrap.toml  eisvogel.toml  exam.toml  homework.toml  ims.toml  lecture_beamer.toml  lmullen_slides_handouts.toml  mla8.toml  resume.toml  rjournal.toml  robusta.toml  simple_book.toml  stats_in_med.toml  thesis_markdown.toml  tufte_handouts.toml  ucl_phd_thesis.toml
mdbook-pandoc/assets/pandoc/csl/: apa_no_doi_no_issue.csl  science.csl
mdbook-pandoc/assets/pandoc/css/: bootstrap_customized.css  bootstrap_sticky_menu.css
mdbook-pandoc/assets/pandoc/filters/: abbrevs.py  dot2tex-filter.py  latexdivs.py  pandoc_latex_barcode.py  pandoc_latex_environment.py  pandoc_mustache.py  pandoc_numbering.py
mdbook-pandoc/assets/pandoc/include_after_body/: exam_end.latex
mdbook-pandoc/assets/pandoc/include_in_header/: beamer_itemsep.latex  lecture_beamer.latex  resume.css.html  ucl_phd_thesis.css.html  ucl_phd_thesis_preamble.latex
mdbook-pandoc/assets/pandoc/lua_filters/: abstract-to-meta.lua  bibexport.lua  code-includes.lua  columns.lua  diagram-generator.lua  latex-hyphen.lua  lilypond.lua  minted.lua  pagebreak.lua  pandoc_lecture_deprecated.lua  pandoc_lecture_exams.lua  pandoc_lecture_extract_filewise.lua  pandoc_lecture_fhbib.lua  pandoc_lecture_hugo.lua  pandoc_lecture_listings.lua  pandoc_lecture_prepareHandout.lua  pandoc_lecture_prepareSlides.lua  pandoc_lecture_questions.lua  pandoc_lecture_showme.lua  pandoc_lecture_stripImageAttrs.lua  pandoc_lecture_tex.lua  scrlttr2.lua  spellcheck.lua  table-short-captions.lua
mdbook-pandoc/assets/pandoc/misc/: Biomet-lineno.sty  RJournal.sty  aaai24.sty  arabica_metadata.yaml  arabica_settings.yaml  bio.cls  biom.bst  imsart-number.bst  imsart.cls  imsart.sty  opencolor.sty  robusta_metadata.yaml  robusta_settings.yaml  statmed.bst  w-art.cls
mdbook-pandoc/assets/templates/: csl.toml  css.toml  filters.toml  include_after_body.toml  include_in_header.toml  lua_filters.toml  reference_docs.toml  template_assets.toml  templates.toml
mdbook-pandoc/assets/templates/csl/: cell.csl  nature.csl
mdbook-pandoc/assets/templates/css/: bootstrap.css  bootstrap_sticky_menu.css  simple_book.css
mdbook-pandoc/assets/templates/filters/: filter_pandoc_run_py.py  pandoc-amsthm.py  pandoc-svg.py  pandoc_latex_french_spaces.py  (+1 more)
mdbook-pandoc/mdbook-pandoc-derive/: Cargo.toml
mdbook-pandoc/mdbook-pandoc-derive-core/: Cargo.toml
mdbook-pandoc/mdbook-pandoc-derive-core/src/: asset_type_list_derive.rs  command_args.rs  lib.rs  pandoc_config_gen.rs  pandoc_resource_gen.rs  pandoc_template_gen.rs  repeated_args.rs  serde_enum_derive.rs  tests.rs
mdbook-pandoc/mdbook-pandoc-derive/src/: lib.rs
mdbook-pandoc/src/: config.rs  lib.rs  main.rs  metadata.rs  parse.rs  tests.rs
mdbook-pandoc/src/config/: commands.rs  epub_metadata.rs  formats.rs  metadata.rs  pandoc_config.rs  resources.rs  templates.rs  tests.rs
mdbook-pandoc/src/metadata/: fields.rs  keys.rs  subfields.rs  tests.rs
mdbook-pandoc/src/parse/: preprocessor.rs  tests.rs
(+118 files in other folders)
