[package]
name = "mdbook-pandoc"
description = "Pandoc backend for mdBook"
keywords = ["mdbook", "pandoc", "epub", "pdf", "book", "gitbook", "rustbook", "markdown"]
license = "MPL-2.0"
repository = "https://github.com/Martin1887/mdbook-pandoc"
authors = ["Martin1887"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdbook-pandoc"
path = "src/bin/mdbook-pandoc.rs"

[dependencies]
mdbook = "*"
regex = "1"
lazy_static = "1"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
toml = "0.5"
void = "1"
