[package]
name = "mdbook-pandoc"
description = "Pandoc backend for mdBook"
keywords = ["mdbook", "pandoc", "epub", "pdf", "book", "gitbook", "rustbook", "markdown"]
license = "MPL-2.0"
repository = "https://github.com/Martin1887/mdbook-pandoc"
authors = ["Martin1887"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdbook-pandoc"
path = "src/bin/mdbook-pandoc.rs"

[workspace]
members = ["mdbook-pandoc-derive", "mdbook-pandoc-derive-core"]

[dev-dependencies]
trybuild = "1.0"

[dependencies]
mdbook-pandoc-derive = {path = "mdbook-pandoc-derive"}
mdbook = "*"
regex = "1.7"
lazy_static = "1.4"
serde = {version = "1.0", features = ["derive"]}
serde_repr = "0.1"
serde_yaml = "0.9"
toml = "0.5"
void = "1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
unicase = "2.6"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
