[package]
name = "mdbook-pandoc"
description = "Pandoc backend for mdBook"
keywords = [
    "mdbook",
    "pandoc",
    "epub",
    "pdf",
    "book",
    "gitbook",
    "rustbook",
    "markdown",
]
license = "MPL-2.0"
repository = "https://github.com/Martin1887/mdbook-pandoc"
authors = ["Martin1887"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdbook-pandoc"
path = "src/bin/mdbook-pandoc/main.rs"

[workspace]
members = ["mdbook-pandoc-derive", "mdbook-pandoc-derive-core"]

[dev-dependencies]
trybuild = "1.0"

[dependencies]
mdbook-pandoc-derive = { path = "mdbook-pandoc-derive" }
mdbook = "*"
regex = "1.10"
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_yaml = "0.9"
toml = "0.8"
toml_edit = "0.22"
anyhow = "1.0"
log = { version = "0.4", features = ["serde"] }
env_logger = { version = "0.11", features = ["color"] }
unicase = "2.7"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
pulldown-cmark = { version = "0.9", default-features = false }
